[package]
name = "cu_counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
pinocchio = { workspace = true }
solana-program-log = { workspace = true }

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
tokio = { version = "1", features = ["full"] }

[features]
no-entrypoint = []