[package]
name = "zero_copy_read"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
pinocchio = { workspace = true }
solana-program-log = { workspace = true }

[features]
no-entrypoint = []